// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paths provider helper should provide all default paths 1`] = `
Array [
  "/Custom/Path/To/App",
  "/Custom/Path/To/App/build",
  "/Custom/Path/To/App/build/services",
  "/Custom/Path/To/App/build/assets/json",
  "/Custom/Path/To/App/manifest.webapp",
  "/Custom/Path/To/App/README.md",
  "/Custom/Path/To/App/LICENSE",
  "/Custom/Path/To/App/src",
  "/Custom/Path/To/App/src/locales",
  "/Custom/Path/To/App/src/targets/vendor/assets",
  "/Custom/Path/To/App/node_modules",
  "/Custom/Path/To/App/src/targets/browser/index.ejs",
  "/Custom/Path/To/App/src/targets/browser/index.js",
  "/Custom/Path/To/App/src/targets/intents/index.ejs",
  "/Custom/Path/To/App/src/targets/intents/index.js",
  "/Custom/Path/To/App/src/targets/services",
  "/Custom/Path/To/App/src/targets/mobile/index.ejs",
  "/Custom/Path/To/App/src/targets/mobile/index.js",
  "/Custom/Path/To/App/src/targets/mobile/www",
  "/Custom/Path/To/App/node_modules/cozy-bar/dist/cozy-bar.js",
  "/Custom/Path/To/App/node_modules/cozy-bar/dist/cozy-bar.css",
  "/Custom/Path/To/App/node_modules/cozy-client-js/dist/cozy-client.js",
  "/Custom/Path/To/App/node_modules/cozy-ui/stylus",
  "/Custom/Path/To/App/node_modules/cozy-ui/transpiled/stylesheet.css",
  "/Custom/Path/To/App/node_modules/cozy-ui/package.json",
  "/Custom/Path/To/App/packages/cozy-scripts/stack/disableCSP.yaml",
  "/Custom/Path/To/App/packages/cozy-scripts/node_modules/.bin/eslint",
  "/Custom/Path/To/App/packages/cozy-scripts/utils/reactExposer.js",
  "/Custom/Path/To/App/packages/cozy-scripts/utils/preactExposer.js",
  "/Custom/Path/To/App/packages/cozy-scripts/stack/quitStack.sh",
]
`;

exports[`Paths provider helper should provide all paths with __USE_PREACT__ 1`] = `
Array [
  "/Custom/Path/To/App",
  "/Custom/Path/To/App/build",
  "/Custom/Path/To/App/build/services",
  "/Custom/Path/To/App/build/assets/json",
  "/Custom/Path/To/App/manifest.webapp",
  "/Custom/Path/To/App/README.md",
  "/Custom/Path/To/App/LICENSE",
  "/Custom/Path/To/App/src",
  "/Custom/Path/To/App/src/locales",
  "/Custom/Path/To/App/src/targets/vendor/assets",
  "/Custom/Path/To/App/node_modules",
  "/Custom/Path/To/App/src/targets/browser/index.ejs",
  "/Custom/Path/To/App/src/targets/browser/index.jsx",
  "/Custom/Path/To/App/src/targets/intents/index.ejs",
  "/Custom/Path/To/App/src/targets/intents/index.jsx",
  "/Custom/Path/To/App/src/targets/services",
  "/Custom/Path/To/App/src/targets/mobile/index.ejs",
  "/Custom/Path/To/App/src/targets/mobile/index.jsx",
  "/Custom/Path/To/App/src/targets/mobile/www",
  "/Custom/Path/To/App/node_modules/cozy-bar/dist/cozy-bar.js",
  "/Custom/Path/To/App/node_modules/cozy-bar/dist/cozy-bar.css",
  "/Custom/Path/To/App/node_modules/cozy-client-js/dist/cozy-client.js",
  "/Custom/Path/To/App/node_modules/cozy-ui/stylus",
  "/Custom/Path/To/App/node_modules/cozy-ui/transpiled/stylesheet.css",
  "/Custom/Path/To/App/node_modules/cozy-ui/package.json",
  "/Custom/Path/To/App/packages/cozy-scripts/stack/disableCSP.yaml",
  "/Custom/Path/To/App/packages/cozy-scripts/node_modules/.bin/eslint",
  "/Custom/Path/To/App/packages/cozy-scripts/utils/reactExposer.js",
  "/Custom/Path/To/App/packages/cozy-scripts/utils/preactExposer.js",
  "/Custom/Path/To/App/packages/cozy-scripts/stack/quitStack.sh",
]
`;

exports[`Paths provider helper should provide all paths with __USE_REACT__ 1`] = `
Array [
  "/Custom/Path/To/App",
  "/Custom/Path/To/App/build",
  "/Custom/Path/To/App/build/services",
  "/Custom/Path/To/App/build/assets/json",
  "/Custom/Path/To/App/manifest.webapp",
  "/Custom/Path/To/App/README.md",
  "/Custom/Path/To/App/LICENSE",
  "/Custom/Path/To/App/src",
  "/Custom/Path/To/App/src/locales",
  "/Custom/Path/To/App/src/targets/vendor/assets",
  "/Custom/Path/To/App/node_modules",
  "/Custom/Path/To/App/src/targets/browser/index.ejs",
  "/Custom/Path/To/App/src/targets/browser/index.jsx",
  "/Custom/Path/To/App/src/targets/intents/index.ejs",
  "/Custom/Path/To/App/src/targets/intents/index.jsx",
  "/Custom/Path/To/App/src/targets/services",
  "/Custom/Path/To/App/src/targets/mobile/index.ejs",
  "/Custom/Path/To/App/src/targets/mobile/index.jsx",
  "/Custom/Path/To/App/src/targets/mobile/www",
  "/Custom/Path/To/App/node_modules/cozy-bar/dist/cozy-bar.js",
  "/Custom/Path/To/App/node_modules/cozy-bar/dist/cozy-bar.css",
  "/Custom/Path/To/App/node_modules/cozy-client-js/dist/cozy-client.js",
  "/Custom/Path/To/App/node_modules/cozy-ui/stylus",
  "/Custom/Path/To/App/node_modules/cozy-ui/transpiled/stylesheet.css",
  "/Custom/Path/To/App/node_modules/cozy-ui/package.json",
  "/Custom/Path/To/App/packages/cozy-scripts/stack/disableCSP.yaml",
  "/Custom/Path/To/App/packages/cozy-scripts/node_modules/.bin/eslint",
  "/Custom/Path/To/App/packages/cozy-scripts/utils/reactExposer.js",
  "/Custom/Path/To/App/packages/cozy-scripts/utils/preactExposer.js",
  "/Custom/Path/To/App/packages/cozy-scripts/stack/quitStack.sh",
]
`;

exports[`Paths provider helper should provide all paths with __USE_VUE__ 1`] = `
Array [
  "/Custom/Path/To/App",
  "/Custom/Path/To/App/build",
  "/Custom/Path/To/App/build/services",
  "/Custom/Path/To/App/build/assets/json",
  "/Custom/Path/To/App/manifest.webapp",
  "/Custom/Path/To/App/README.md",
  "/Custom/Path/To/App/LICENSE",
  "/Custom/Path/To/App/src",
  "/Custom/Path/To/App/src/locales",
  "/Custom/Path/To/App/src/targets/vendor/assets",
  "/Custom/Path/To/App/node_modules",
  "/Custom/Path/To/App/src/targets/browser/index.ejs",
  "/Custom/Path/To/App/src/targets/browser/index.js",
  "/Custom/Path/To/App/src/targets/intents/index.ejs",
  "/Custom/Path/To/App/src/targets/intents/index.js",
  "/Custom/Path/To/App/src/targets/services",
  "/Custom/Path/To/App/src/targets/mobile/index.ejs",
  "/Custom/Path/To/App/src/targets/mobile/index.js",
  "/Custom/Path/To/App/src/targets/mobile/www",
  "/Custom/Path/To/App/node_modules/cozy-bar/dist/cozy-bar.js",
  "/Custom/Path/To/App/node_modules/cozy-bar/dist/cozy-bar.css",
  "/Custom/Path/To/App/node_modules/cozy-client-js/dist/cozy-client.js",
  "/Custom/Path/To/App/node_modules/cozy-ui/stylus",
  "/Custom/Path/To/App/node_modules/cozy-ui/transpiled/stylesheet.css",
  "/Custom/Path/To/App/node_modules/cozy-ui/package.json",
  "/Custom/Path/To/App/packages/cozy-scripts/stack/disableCSP.yaml",
  "/Custom/Path/To/App/packages/cozy-scripts/node_modules/.bin/eslint",
  "/Custom/Path/To/App/packages/cozy-scripts/utils/reactExposer.js",
  "/Custom/Path/To/App/packages/cozy-scripts/utils/preactExposer.js",
  "/Custom/Path/To/App/packages/cozy-scripts/stack/quitStack.sh",
]
`;

exports[`Paths provider helper should provide all paths with COZY_SCRIPTS_APP_BUILD_DIR 1`] = `
Array [
  "/Custom/Path/To/App",
  "/Custom/Path/To/App/subfolder/build/myapp",
  "/Custom/Path/To/App/subfolder/build/myapp/services",
  "/Custom/Path/To/App/subfolder/build/myapp/assets/json",
  "/Custom/Path/To/App/manifest.webapp",
  "/Custom/Path/To/App/README.md",
  "/Custom/Path/To/App/LICENSE",
  "/Custom/Path/To/App/src",
  "/Custom/Path/To/App/src/locales",
  "/Custom/Path/To/App/src/targets/vendor/assets",
  "/Custom/Path/To/App/node_modules",
  "/Custom/Path/To/App/src/targets/browser/index.ejs",
  "/Custom/Path/To/App/src/targets/browser/index.js",
  "/Custom/Path/To/App/src/targets/intents/index.ejs",
  "/Custom/Path/To/App/src/targets/intents/index.js",
  "/Custom/Path/To/App/src/targets/services",
  "/Custom/Path/To/App/src/targets/mobile/index.ejs",
  "/Custom/Path/To/App/src/targets/mobile/index.js",
  "/Custom/Path/To/App/src/targets/mobile/www",
  "/Custom/Path/To/App/node_modules/cozy-bar/dist/cozy-bar.js",
  "/Custom/Path/To/App/node_modules/cozy-bar/dist/cozy-bar.css",
  "/Custom/Path/To/App/node_modules/cozy-client-js/dist/cozy-client.js",
  "/Custom/Path/To/App/node_modules/cozy-ui/stylus",
  "/Custom/Path/To/App/node_modules/cozy-ui/transpiled/stylesheet.css",
  "/Custom/Path/To/App/node_modules/cozy-ui/package.json",
  "/Custom/Path/To/App/packages/cozy-scripts/stack/disableCSP.yaml",
  "/Custom/Path/To/App/packages/cozy-scripts/node_modules/.bin/eslint",
  "/Custom/Path/To/App/packages/cozy-scripts/utils/reactExposer.js",
  "/Custom/Path/To/App/packages/cozy-scripts/utils/preactExposer.js",
  "/Custom/Path/To/App/packages/cozy-scripts/stack/quitStack.sh",
]
`;

exports[`Paths provider helper should provide all paths with COZY_SCRIPTS_APP_MANIFEST 1`] = `
Array [
  "/Custom/Path/To/App",
  "/Custom/Path/To/App/build",
  "/Custom/Path/To/App/build/services",
  "/Custom/Path/To/App/build/assets/json",
  "/Custom/Path/To/App/subfolder/src/myapp/manifest.webapp",
  "/Custom/Path/To/App/README.md",
  "/Custom/Path/To/App/LICENSE",
  "/Custom/Path/To/App/src",
  "/Custom/Path/To/App/src/locales",
  "/Custom/Path/To/App/src/targets/vendor/assets",
  "/Custom/Path/To/App/node_modules",
  "/Custom/Path/To/App/src/targets/browser/index.ejs",
  "/Custom/Path/To/App/src/targets/browser/index.js",
  "/Custom/Path/To/App/src/targets/intents/index.ejs",
  "/Custom/Path/To/App/src/targets/intents/index.js",
  "/Custom/Path/To/App/src/targets/services",
  "/Custom/Path/To/App/src/targets/mobile/index.ejs",
  "/Custom/Path/To/App/src/targets/mobile/index.js",
  "/Custom/Path/To/App/src/targets/mobile/www",
  "/Custom/Path/To/App/node_modules/cozy-bar/dist/cozy-bar.js",
  "/Custom/Path/To/App/node_modules/cozy-bar/dist/cozy-bar.css",
  "/Custom/Path/To/App/node_modules/cozy-client-js/dist/cozy-client.js",
  "/Custom/Path/To/App/node_modules/cozy-ui/stylus",
  "/Custom/Path/To/App/node_modules/cozy-ui/transpiled/stylesheet.css",
  "/Custom/Path/To/App/node_modules/cozy-ui/package.json",
  "/Custom/Path/To/App/packages/cozy-scripts/stack/disableCSP.yaml",
  "/Custom/Path/To/App/packages/cozy-scripts/node_modules/.bin/eslint",
  "/Custom/Path/To/App/packages/cozy-scripts/utils/reactExposer.js",
  "/Custom/Path/To/App/packages/cozy-scripts/utils/preactExposer.js",
  "/Custom/Path/To/App/packages/cozy-scripts/stack/quitStack.sh",
]
`;

exports[`Paths provider helper should provide all paths with COZY_SCRIPTS_APP_SRC_DIR 1`] = `
Array [
  "/Custom/Path/To/App",
  "/Custom/Path/To/App/build",
  "/Custom/Path/To/App/build/services",
  "/Custom/Path/To/App/build/assets/json",
  "/Custom/Path/To/App/manifest.webapp",
  "/Custom/Path/To/App/README.md",
  "/Custom/Path/To/App/LICENSE",
  "/Custom/Path/To/App/subfolder/src/myapp",
  "/Custom/Path/To/App/subfolder/src/myapp/locales",
  "/Custom/Path/To/App/subfolder/src/myapp/targets/vendor/assets",
  "/Custom/Path/To/App/node_modules",
  "/Custom/Path/To/App/subfolder/src/myapp/targets/browser/index.ejs",
  "/Custom/Path/To/App/subfolder/src/myapp/targets/browser/index.js",
  "/Custom/Path/To/App/subfolder/src/myapp/targets/intents/index.ejs",
  "/Custom/Path/To/App/subfolder/src/myapp/targets/intents/index.js",
  "/Custom/Path/To/App/subfolder/src/myapp/targets/services",
  "/Custom/Path/To/App/subfolder/src/myapp/targets/mobile/index.ejs",
  "/Custom/Path/To/App/subfolder/src/myapp/targets/mobile/index.js",
  "/Custom/Path/To/App/subfolder/src/myapp/targets/mobile/www",
  "/Custom/Path/To/App/node_modules/cozy-bar/dist/cozy-bar.js",
  "/Custom/Path/To/App/node_modules/cozy-bar/dist/cozy-bar.css",
  "/Custom/Path/To/App/node_modules/cozy-client-js/dist/cozy-client.js",
  "/Custom/Path/To/App/node_modules/cozy-ui/stylus",
  "/Custom/Path/To/App/node_modules/cozy-ui/transpiled/stylesheet.css",
  "/Custom/Path/To/App/node_modules/cozy-ui/package.json",
  "/Custom/Path/To/App/packages/cozy-scripts/stack/disableCSP.yaml",
  "/Custom/Path/To/App/packages/cozy-scripts/node_modules/.bin/eslint",
  "/Custom/Path/To/App/packages/cozy-scripts/utils/reactExposer.js",
  "/Custom/Path/To/App/packages/cozy-scripts/utils/preactExposer.js",
  "/Custom/Path/To/App/packages/cozy-scripts/stack/quitStack.sh",
]
`;
